--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.مخارجالحروف">
         <activity
+            android:name=".QuizMain"
+            android:exported="false" />
+        <activity
+            android:name=".GitMain"
+            android:exported="false" />
+        <activity
             android:name=".TutorialMain"
             android:exported="false" />
         <activity
