Added score page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.مخارجالحروف">
         <activity
+            android:name=".QuizSecondary"
+            android:exported="false" />
+        <activity
             android:name=".QuizMain"
             android:exported="false" />
         <activity
